Fix mobile layout breaking

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,11 +35,8 @@ body {
 @media only screen and (max-width: 600px) {
   body {
     min-height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-areas: "header"
-                         "sidebar"
-                         "main";
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -210,11 +207,25 @@ main {
   gap: 1rem;
 }
 
+
+
 .btn.add-todo-btn {
   padding: 0.2em 0.5em;
   font-size: 1.6rem;
   font-weight: bold;
 }
+
+@media only screen and (max-width: 800px) {
+  .todo-input-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .btn.add-todo-btn {
+    align-self: center;
+  }
+}
+
 
 .selected-project-title {
   width: fit-content;
@@ -229,13 +240,14 @@ main {
   row-gap: 1.5rem;
 }
 
+
 .todo {
   background-color: #ececec;
   border-radius: 5px;
   box-shadow: 3px 3px 5px #888888;
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 1rem;
   padding: 1.2em 1em;
   align-items: center;
 }
